R win binaries in KNIME install instruction; R package dependencies for metabolomics workflow (packages of other workflows allready in Binaries

--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -109,6 +109,7 @@ First, we install some additional extensions that are required by our OpenMS nod
     \item KNIME File Handling Nodes
     \item KNIME Interactive R Statistics Integration
     \item KNIME Math Expression (JEP)
+    \item KNIME R Statistics Integration (Windows Binaries)
     \item KNIME Report Designer
     \item KNIME SVG Support
     \item KNIME XLS Support
