--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -237,9 +237,8 @@ Inspect the nodes of this section. Customize your visualization and possibly try
 \end{task}
 
 \subsubsection{Advanced visualization}
-Even though the basic capabilities for (interactive) plots in KNIME are valuable for initial data exploration, professional looking depiction of analysis results often relies on dedicated plotting libraries. The statistics language R supports the addition of a large variety of packages, including packages providing extensive plotting capabilities. This part of the workflow shows how to use R nodes in KNIME to visualize more advanced figures. Specifically, we make use of different plotting packages to realize heatmaps and a PCA plot.
 
-\paragraph R Dependencies: This section requires that the R packages ggplot2 and ggbiplot are both installed. ggplot2 is part of the \textit{KNIME R Statistics Integration (Windows Binaries)} installed during the tutorial setup section, ggbiplot however is not.
+R Dependencies: This section requires that the R packages ggplot2 and ggbiplot are both installed. ggplot2 is part of the \textit{KNIME R Statistics Integration (Windows Binaries)} installed during the tutorial setup section, ggbiplot however is not.
 In case that you use an R installation where one or both of them are not yet installed, add an \KNIMENODE{R Snippet} node and double-click to configure. In the \textit{R Script} text editor, enter the following code:
 \begin{lstlisting}
 #Include the next line if you also have to install ggplot2:
@@ -249,7 +248,10 @@ install.packages("devtools")
 library(devtools)
 install_github("vqv/ggbiplot")
 \end{lstlisting}
-Press \menu{Eval script} to execute the script.
+Press \menu{Eval script} to execute the script.\newline
+
+Even though the basic capabilities for (interactive) plots in KNIME are valuable for initial data exploration, professional looking depiction of analysis results often relies on dedicated plotting libraries. The statistics language R supports the addition of a large variety of packages, including packages providing extensive plotting capabilities. This part of the workflow shows how to use R nodes in KNIME to visualize more advanced figures. Specifically, we make use of different plotting packages to realize heatmaps and a PCA plot.
+
 
 \begin{itemize}
 \item The used \KNIMENODE{RView (Table)} nodes combine the possibility to write R snippet code with visualization capabilities inside KNIME. Resulting images can be looked at in the output RView, or saved via the \KNIMENODE{Image Port Writer} node.
