--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -237,7 +237,7 @@ Inspect the nodes of this section. Customize your visualization and possibly try
 \end{task}
 
 \subsubsection{Advanced visualization}
-
+\label{sec:metaboR}
 R Dependencies: This section requires that the R packages ggplot2 and ggbiplot are both installed. ggplot2 is part of the \textit{KNIME R Statistics Integration (Windows Binaries)} installed during the tutorial setup section, ggbiplot however is not.
 In case that you use an R installation where one or both of them are not yet installed, add an \KNIMENODE{R Snippet} node and double-click to configure. In the \textit{R Script} text editor, enter the following code:
 \begin{lstlisting}
