--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -5,6 +5,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Getting started}
 
+Before we get started we will install OpenMS and KNIME using the installers provided on the USB stick. Please choose the directory that matches your operating system and execute the installer. Note that these steps are not be necessary if you use one of our laptops.
+
+For example for Windows you call
+\begin{itemize}
+\item the OpenMS installer: \directory{Windows / OpenMS-2.0\_Win64\_setup.exe}
+\item the KNIME installer: \directory{Windows / OpenMS-2.0-prerequisites-installer.exe} \\ and \directory{Windows / KNIME\ 2.12.0\ Installer\ (64bit).exe}
+\end{itemize}
+
+on Mac you call
+\begin{itemize}
+\item the OpenMS installer: \directory{Mac / OpenMS-2.0.0\_setup.dmg}
+\item the KNIME installer: \directory{Mac / knime\_2.12.0.macosx.cocoa.x86\_64.dmg}
+\end{itemize}
+
+and follow the instructions.
+
 \subsection{Data conversion}
 \label{Data_Conversion}
 
