--- a/Handout/openswath.tex
+++ b/Handout/openswath.tex
@@ -133,11 +133,11 @@ with statistical information available in\\
 
 Please note that due to the semi-supervised machine learning approach of mProphet the results differ slightly when mProphet is executed several times.
 
-\begin{figure*}[htbp]
-  \includegraphics[width=1\textwidth]{graphics/OpenSwath}
-\caption{OpenSWATH KNIME Workflow.}
-\label{fig:toppas}
-\end{figure*}
+\begin{figure}[htbp]
+  \includegraphics[width=\textwidth]{graphics/OpenSwath}
+  \caption{OpenSWATH KNIME Workflow.}
+  \label{fig:openswath}
+\end{figure}
 
 \subsection{From the example dataset to real-life applications}
 The sample dataset used in this tutorial is part of the larger SWATH MS Gold Standard (SGS) dataset which is described in the publication of Roest et al.~\cite{Rost2014fd}.
