--- a/Handout/labelfree.tex
+++ b/Handout/labelfree.tex
@@ -1,7 +1,7 @@
 %!TEX root = handout.tex
 
 \newpage
-\section{Label-free quantification}
+\section{Session 4 - Label-free quantification}
 \label{sec:lfq}
 
 \subsection{Introduction}
@@ -199,5 +199,4 @@ Every row in this table corresponds to a so-called consensus feature, i.e., a pe
 %Plotting of the (cumulative) distribution of q-values, quality scores (of the consensus features) or other peptide hit properties using \KNIMENODE{R View} nodes or the standard KNIME nodes for plotting (which include interactive functionality).
 %\end{task}
 
-\note{For further inspiration you might want to take a look at the more advanced KNIME data analysis examples in the metabolomics tutorial.}
 
