--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -1,5 +1,12 @@
 %!TEX root = handout.tex
 
+% file names are changed quite often between tutorial so make them configurable at the top
+\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 2.12.0\ Installer\ (64bit).exe}
+\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.0\_Win64\_setup.exe}
+\newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.0-prerequisites-installer.exe}
+\newcommand{\MacKnimeInstallerName}{Mac / knime\_2.12.0.macosx.cocoa.x86\_64.dmg}
+\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.0.0\_setup.dmg}
+
 \setcounter{equation}{0}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9,14 +16,14 @@ Before we get started we will install OpenMS and KNIME using the installers prov
 
 For example for Windows you call
 \begin{itemize}
-\item the OpenMS installer: \directory{Windows / OpenMS-2.0\_Win64\_setup.exe}
-\item the KNIME installer: \directory{Windows / OpenMS-2.0-prerequisites-installer.exe} \\ and \directory{Windows / KNIME\ 2.12.0\ Installer\ (64bit).exe}
+\item the OpenMS installer: \directory{\WindowsOpenMSInstallerName}
+\item the KNIME installer: \directory{\WindowsOpenMSPrereqInstallerName} \\ and \directory{\WindowsKnimeInstallerName}
 \end{itemize}
 
 on Mac you call
 \begin{itemize}
-\item the OpenMS installer: \directory{Mac / OpenMS-2.0.0\_setup.dmg}
-\item the KNIME installer: \directory{Mac / knime\_2.12.0.macosx.cocoa.x86\_64.dmg}
+\item the OpenMS installer: \directory{\MacOpenMSInstallerName}
+\item the KNIME installer: \directory{\MacKnimeInstallerName}
 \end{itemize}
 
 and follow the instructions.
